test/org/midica/testfiles/failing/unknown-cmd.midica
INCLUDE inc/instruments.midica

0 c /4

UNKNOWN_CMD
